--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
                     <input type="submit" value="😎 إبعت يابرنس 😄">
                 </div>
             </form>
-
+<div class="copyright">
+    <h3>made with<span>♥</span>by alaa eldin © 2024<br>for alex dispatcher</h3>
+</div>
         </div>
     </div>
 
