New version of submition

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div id="popup">
 
 
-        بياناتك تم ارسالها بنجاح
+        تم ارسال البيانات بنجاح
         <br>
         <br>
         <a href="#" onClick="hide()">OK</a>
