--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
                         <span class="details">ملاحظات ان وجد</span>
                         <input type="text" id="notes" name="notes" placeholder="" required="" value="لا يوجد">
                     </div>
+
+                    <div class="input-box">
+
+                        <input type="datetime" id="timeofsubmission" name="timeofsubmission" placeholder="" required="">
+                    </div>
+
+
                 </div>
 
 
