--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 
                     <div class="input-box">
 
-                        <input type="text" id="timeofsubmission" name="timeofsubmission" placeholder="" required="">
+                        <input type="datetime-local" id="timeofsubmission" name="timeofsubmission" placeholder=""
+                            required="">
                     </div>
 
                 </div>
@@ -170,7 +171,6 @@
     </div>
 
     <div id="popuperror">
-
 
         يوجد مشكلة في الانترنت
         <br>
