--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
 
                     <div class="input-box">
 
-                        <input type="datetime-local" id="timeofsubmission" name="timeofsubmission" placeholder=""
-                            required="">
+                        <input type="text" id="timeofsubmission" name="timeofsubmission" placeholder="" required="">
                     </div>
 
                 </div>
