--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Beyti Dispatcher System for enter delivery transaction for every employee on company , count of transaction , count of channels .">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./348919444_1211321102794647_6253172549618864219_n.jpg" />
     <title>Transaction Delivery</title>
