--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                         <input type="text" id="timeofsubmission" name="timeofsubmission" placeholder="" required="">
                     </div>
 
+                    <div class="input-box">
+                        <div id="time"></div>
+
+                    </div>
+
                 </div>
 
 
@@ -195,3 +200,4 @@
 <script src="script.js"></script>
 
 </html>
+
