--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <div class="wave"></div>
                 <div class="wave"></div>
                 <div class="wave"></div>
+                <img src="/loading.gif" alt="Loading logo">
                 <div class="wave"></div>
                 <div class="wave"></div>
                 <div class="wave"></div>
@@ -195,5 +196,6 @@
 <script src="script.js"></script>
 
 </html>
+
 
 
