--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="wave"></div>
                 <div class="wave"></div>
                 <div class="wave"></div>
-                <img src="/loading.gif" alt="Loading logo">
+                <img src="/output-loading.gif" alt="Loading logo" width="200">;
                 <div class="wave"></div>
                 <div class="wave"></div>
                 <div class="wave"></div>
@@ -196,6 +196,7 @@
 <script src="script.js"></script>
 
 </html>
+
 
 
 
