--- a/index.html
+++ b/index.html
@@ -44,20 +44,7 @@
 
         <div class="title">Dispatcher Transaction</div>
 
-        <div class="content">
-            <div class="center" id="loading">
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <img src="/output-loading.gif" alt="Loading logo" width="200">;
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-            </div>
+ 
             <form id="myForm" method="post" name="google-sheet">
                 <div class="user-details">
 
@@ -145,7 +132,22 @@
 
                         </select>
                     </div>
-
+                    
+                    // Loading when submit
+                   <div class="content">
+                        <div class="center" id="loading">
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <img src="/output-loading.gif" alt="Loading logo" width="200">;
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                            <div class="wave"></div>
+                        </div>
 
                     <div class="input-box">
                         <span class="details">ملاحظات ان وجد</span>
@@ -196,6 +198,7 @@
 <script src="script.js"></script>
 
 </html>
+
 
 
 
