--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </select>
                     </div>
                     
-                    // Loading when submit
+<!--                     Loading when submit -->
                    <div class="content">
                         <div class="center" id="loading">
                             <div class="wave"></div>
@@ -198,6 +198,7 @@
 <script src="script.js"></script>
 
 </html>
+
 
 
 
