--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div id="popup">
 
 
-        بياناتك تم ارسالها بنجاح
+        تم إرسال البيانات بنجاح
         <br>
         <br>
         <a href="#" onClick="hide()">OK</a>
@@ -198,6 +198,7 @@
 <script src="script.js"></script>
 
 </html>
+
 
 
 
